Revert "fix: social media icon excess whitespace (#768)" (#769)
This reverts commit 97fea1befa81c7704e426a67faf21ba43b75742d.

--- a/taccsite_cms/static/site_cms/css/src/_imports/components/django.cms.blog.app.item.css
+++ b/taccsite_cms/static/site_cms/css/src/_imports/components/django.cms.blog.app.item.css
@@ -134,23 +134,6 @@ Styleguide Components.DjangoCMS.Blog.App.Item
 
 
 
-/* Metadata */
-
-:--article-item .attrs {
-  display: flex;
-  flex-direction: row;
-}
-:--article-item .attrs {
-  justify-content: space-between;
-}
-:--article-item .date {
-  order: -1;
-}
-
-
-
-
-
 /* Visual */
 
 :--article-item .blog-visual:empty {
